--- a/src/components/PostCard.astro
+++ b/src/components/PostCard.astro
@@ -30,7 +30,7 @@ const publishedDate = post.properties?.published_date?.value?.start;
     )
   }
 
-  {showReadMore && slug && <a href={`${import.meta.env.BASE_URL}posts/${slug}`}>Read more →</a>}
+  {showReadMore && slug && <a href={`${import.meta.env.BASE_URL}/posts/${slug}`}>Read more →</a>}
 
   <hr/>
 </article>
